2010-04-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* startup/linkcmds: Now links all tests.

2010-04-27	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/linkcmds: Revert previous change. Remove .reginfo from .bss
	section where it was present.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* startup/linkcmds: Add NOLOAD to .bss to eliminate warnings.

2010-04-25	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* bsp_specs: Remove extra } to eliminate warning.

2009-12-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* network/network.c (au1x00_emac_ioctl): Use ioctl_command_t.

2009-11-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/bspstart.c: Remove nested externs.
	#include <libcpu/isr_entries.h.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/csb350.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/csb350.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac: Rename BSP_BOOTCARD_OPTIONS to
	RTEMS_BSP_BOOTCARD_OPTIONS. Add RTEMS_BSP_CLEANUP_OPTIONS so all BSPs
	have the same options.

2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2009-02-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* startup/linkcmds: It appears 16 MB is the configuration.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-09-30	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clockdrv.c: Correct spelling error in comment.
	* include/tm27.h: Delete duplicate #endif.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>
