@@ -12,6 +12,8 @@ dist_project_lib_DATA = bsp_specs
 
 include_HEADERS = include/bsp.h
 include_HEADERS += include/tm27.h
+include_HEADERS += include/tm27.h
+include_bsp_HEADERS = ../shared/liblnk/regs.h
 
 nodist_include_HEADERS = include/bspopts.h
 nodist_include_bsp_HEADERS = ../../shared/include/bootcard.h
@@ -21,7 +23,7 @@ nodist_include_HEADERS += ../../shared/include/coverhd.h
 noinst_PROGRAMS =
 
 noinst_LIBRARIES = libbspstart.a
-libbspstart_a_SOURCES = start/start.S start/regs.h
+libbspstart_a_SOURCES = start/start.S ../shared/liblnk/regs.h
 project_lib_DATA = start.$(OBJEXT)
 
 dist_project_lib_DATA += startup/linkcmds
