@@ -1,3 +1,9 @@
+2010-05-13	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* Makefile.am, preinstall.am, start/start.S: Many files were duplicated
+	across MIPS BSPs. Now those which were directly copied are shared.
+	* start/regs.h: Removed.
+
 2010-04-27	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* start/start.S, startup/linkcmds: Revert previous change. Remove
